fix user show overflow problem

--- a/app/frontend/stylesheets/usershow.scss
+++ b/app/frontend/stylesheets/usershow.scss
@@ -1,6 +1,6 @@
 .post-load-page{
   overflow: auto;
-  height: calc(100vh - 120px);
+  // height: calc(100vh - 120px);
   width: 740px;
   margin: auto;
 }
@@ -9,6 +9,6 @@
 @media (max-width:415px){
   .post-load-page{
     width: 100%;
-    height: 70vh;
+    // height: 70vh;
   }
 }
